0.9
- Minimum version of Kodi is 15 (Isengard)
- Change XBMC references to Kodi
- Add support for up to 63 lights
- Update addon icon and background

0.8
- Reworked settings handling (old settings will be lost)
- Reorganised settings window
- Added a readme

0.7
- Refactored bridge code
- Added presets, you can select them when starting te addon from the program sections or you can bind it
  to a button with the following code "RunScript(service.huecontrol,action=showpresets)"

0.6
- Wrong lamps were controlled (broken since 0.4)

0.5
- Last lamp was not controlled
- Extended number of lamps to 15
- Show settings when starting the addon from the programs section of XBMC

0.4
- Fixed lights not returning to saved state when movie ends
- Updated to the new XBMC translation system

0.3:
- Changed settings handling so now you can link a bridge and immediately save the lampstate (without leaving the settings window)
- More translatable strings
- Use own images

0.2:
- Update for Frodo

0.1:
- Initial version
 