@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="service.huecontrol"
-       name="hue control"
-       version="0.8"
+       name="Hue Control"
+       version="0.9"
        provider-name="Michel van de Wetering">
   <requires>
-    <import addon="xbmc.python" version="2.20.0"/>
+    <import addon="xbmc.python" version="2.19.0"/>
+    <import addon="script.module.requests" version="2.9.1"/>
   </requires>
   <extension point="xbmc.python.script" library="script.py" >
   </extension>
