@@ -14,6 +14,7 @@ import socket
 import time
 import re
 import sys
+import requests
 
 MAX_LAMPS = 63   # Max lamps supported by the bridge
 NUM_THREADS = 20 # Number of threads spawned when searching the network for bridges
@@ -24,14 +25,18 @@ class BridgeLocator:
     lock = Lock()
     q = Queue()
 
-    def __init__(self, iprange=None):
+    def __init__(self, iprange=None, logfunc=None):
         self.iprange = iprange
+        self.logfunc = logfunc
+        
+        self.log("BridgeLocator iprange:{0}".format(iprange))
 
     def FindBridgeTask(self):
         done = False
         while not done:
             item = self.q.get()
-#            print(item)
+            self.log("Check IP: {0}".format(item))
+
             sys.stdout.write('.')
             if item == "STOP":
                 done = True
@@ -39,7 +44,9 @@ class BridgeLocator:
                 bridge = self.GetBridgeFromIp(item)
                 if bridge:
                     with self.lock:
-                        self.bridges.append(bridge)
+                        #self.bridges.append(bridge)
+                        self.bridgesById[bridge.id] = bridge;
+
             self.q.task_done()
 
     def SearchIpRange(self, iprange=None):
@@ -47,19 +54,35 @@ class BridgeLocator:
         if iprange == None:
             iprange = self.iprange;
 
-        print(iprange)
+        self.log("SearchIpRange {0}".format(iprange))
+
         tmp = iprange.rfind('.')
         ipstart = iprange[0:tmp]
-        #print(ipstart)
         for i in range(1,254):
-            #self.iprange = "192.168.178.{0}".format(i)
-            #print(ipstart,i)
+            self.log("Adding IP address {0}.{1}".format(ipstart,i))
             self.q.put("{0}.{1}".format(ipstart, i))
         
     def FindBridges(self, progress=None):
         '''Crude first implementation, just try all addresses in the subnet'''
-        self.bridges = []
+        #self.bridges = []
+        self.bridgesById = {}
+
+        # First try nupnp
+        r = requests.get('http://www.meethue.com/api/nupnp')
+        if r.status_code == 200:
+            bridgelist = r.json()
+            
+            for nupnp_bridge in bridgelist:
+                self.log(str(nupnp_bridge))
+                
+                # Ignore the ID, that will be fetched from the bridge if it exists at the given IP address
+                bridge = self.GetBridgeFromIp(nupnp_bridge["internalipaddress"])
+                if bridge:
+                    #self.bridges.append(bridge);
+                    self.bridgesById[bridge.id] = bridge;
         
+
+        # Now start scan on local network
         for i in range(NUM_THREADS):
             t = Thread(target=self.FindBridgeTask)
             t.daemon = True
@@ -93,7 +116,6 @@ class BridgeLocator:
                 numitemsleft = self.q.qsize()
                 percent = ((numitemstotal - numitemsleft) / float(numitemstotal)) * 100
                 progress(int(percent))
-                #print("{0} {1} {2}".format(numitemstotal,(numitemstotal - numitemsleft),percent))
                 time.sleep(0.3)
         
             progress(100)    # Done ;-)
@@ -103,63 +125,92 @@ class BridgeLocator:
         # Done with the threads, time to close them down, otherwise they hang Kodi when tying to close it
         for i in range(NUM_THREADS):
             self.q.put("STOP")
+
+        # Convert to a list
+        bridges = []
+        for bridgeid in self.bridgesById.keys():
+            bridges.append(self.bridgesById[bridgeid]);
         
-        return self.bridges    
+        return bridges    
 
 
     def GetBridgeFromIp(self, ip):
-        #print(ip)
+        self.log("GetBridgeFromIp {0}".format(ip))
+
         bridge = None
         try:
             conn = httplib.HTTPConnection(ip, timeout=1)
-            conn.request("GET", '/description.xml') 
-            resp = conn.getresponse()  # Ignore response for now, assume it all went OK
+            conn.request("GET", '/api/nouser/config') 
+            resp = conn.getresponse()
+            data = resp.read()
+
+            self.log("{0}, {1}, {2}".format(ip, resp.status, data))
             
             if (resp.status == 200):
-                # Found a description.xml. Parse it to get the bridge ID (and name)
-                xmldata = ""
-                chunk = True
-
-                while chunk:
-                    chunk = resp.read()
-                    xmldata += chunk
-
-                xmldoc = minidom.parseString(xmldata)  
+                # Got a config back. Parse it to get the bridge ID (and name)
+                config = json.loads(data)
                 
-                devicenode = xmldoc.getElementsByTagName("device")[0]
-                serial = devicenode.getElementsByTagName("serialNumber")[0].childNodes[0].data
-                friendlyname = devicenode.getElementsByTagName("friendlyName")[0].childNodes[0].data
+                # Older versions of the addon used the "serial" found in the description.xml this seems to be the macaddress without the colons.
+                # The new software with API 1.10 and up have a "bridgeid" in /config, this seems to be the macaddress with "fffe" stuffed in the middle, use that if available (and use the lowercase as on the /nupnp)
+                # If not available use the "mac" attribute in config to be able to work with older bridge software versions
+                bridgeid = None
+                if "bridgeid" in config:
+                    bridgeid = config["bridgeid"].lower()
+                elif "mac" in config:
+                    self.log("Found a bridge with very old software version({0}) at IP {1}. You might want to update the bridge software with the Philips Hue app.".format(config["swversion"], ip))
+                    mac = config["mac"].translate(None, " :")
+                    bridgeid = "{0}fffe{1}".format(mac[0:6], mac[6:12]).lower()
+                else:
+                    self.log("Unable to detect bridge ID! Try updating the bridge software with the Philips Hue app")
                 
-                bridge = Bridge(ip, serial, friendlyname)
+                # An old (round) bridge can have been migrated to a new (square) bridge.
+                # store the replacesbridgeid to ba able to detect migrated bridges for seamless transition
+                replacesbridgeid = None
+                if "replacesbridgeid" in config and config["replacesbridgeid"] != None:
+                    replacesbridgeid = config["replacesbridgeid"].lower()
+
+                friendlyname = config["name"]
+                
+                bridge = Bridge(ip, bridgeid, friendlyname, replacesbridgeid=replacesbridgeid)
 
             conn.close()
             
         except Exception as e:
-            #print str(datetime.now()), "An error occured!"
-            #traceback.print_exc()
+            self.log("{0} Could not connect to {1}\n{2}".format(str(datetime.now()), ip, e))
+            #self.log(traceback.print_exc())
             pass
     
         return bridge
                 
         
     def FindBridgeById(self, bridgeid, lastip=None):
-        # TODO, make it fast when no IP provided. Then stop when found.
-        
+       
         # Try last known IP if provided
         if lastip:
             bridge = self.GetBridgeFromIp(lastip)
             if bridge and bridge.id == bridgeid:
                 return bridge;
                 
-        # Otherwise just find all and filter.
+        # Not found at last IP just find all and filter.
         bridges = self.FindBridges()
-        
+
+        # First try to find an exact match
         for bridge in bridges:
             if bridge.id == bridgeid:
+                return bridge;
+
+        # See if there is a bridge that was migrated from the desired ID
+        for bridge in bridges:
+            if bridge.replacesbridgeid == bridgeid:
+                # TODO update the stored bridge ID?
                 return bridge;
         
         return None
 
+    def log(self, msg):
+        if self.logfunc:
+            self.logfunc(msg)
+        
 
 class Bridge:
     '''Represents the bridge, use it to control the lights'''
@@ -171,29 +222,28 @@ class Bridge:
     authorized = False
     
 
-    def __init__(self, ip=None, id=None, name=None, devicetype=None, username=None, logfunc=None):
+    def __init__(self, ip=None, id=None, name=None, devicetype=None, username=None, logfunc=None, replacesbridgeid=None):
         self.ip = ip
         self.id = id
         self.name = name
         self.devicetype = devicetype
         self.username = username
         self.logfunc = logfunc
+        self.replacesbridgeid = replacesbridgeid
 
     def __repr__(self):
         return "{0} - {1} - {2}".format(self.name, self.id, self.ip)
         
 
     def authorize(self):
-        # Attempt to create the/a user
-        data = {'devicetype':self.devicetype}
-        if (self.username):
-            data['username'] = self.username,
+        # Attempt to create a user
+        data = {'devicetype': self.devicetype}
         
         #jsonstr = json.dumps(data)
         reply = self.POST("", data, addUsername=False)
         
         if ('success' in reply[0]):
-            self.username = reply[0]["success"]["username"]  # Will be random name or the one provided
+            self.username = reply[0]["success"]["username"]  # Will be random name
             return 0
         elif ('error' in reply[0]):
             return reply[0]['error']['type']
@@ -231,18 +281,15 @@ class Bridge:
             return
             
         lights = parsedjson['lights']
-        #print(lights)
 
         for i in range(MAX_LAMPS):
             strId = str(i)
-            #print(strId)
             
             if  not lightList or (i in lightList):
-                #print(strId)
 
                 if (strId in lights):
                     storedstate = lights[strId]['state']
-                    #print(strId, storedstate)
+                    self.log("setFullStateLights ID:{0}, State:{1}".format(strId, storedstate))
 
                     lampstate = {}
 
@@ -264,7 +311,6 @@ class Bridge:
                                     lampstate['hue'] = storedstate['hue']
                                     lampstate['sat'] = storedstate['sat']
 
-                    #print(strId + ":" + json.dumps(lampstate))
                     self.PUT('/lights/{0}/state'.format(strId), lampstate)
 
         
@@ -288,8 +334,7 @@ class Bridge:
             url += '/{0}'.format(self.username)
         url += resource
 
-        if self.logfunc:
-            self.logfunc('> {0}, {1}, {2}\n'.format(method, url, body))
+        self.log('> {0}, {1}, {2}\n'.format(method, url, body))
 
         try:
             conn = httplib.HTTPConnection(self.ip)
@@ -300,12 +345,10 @@ class Bridge:
             reply = json.loads(data)
             conn.close()
         except Exception as e:
-            if self.logfunc:
-                self.logfunc('E {0}\n'.format(traceback.format_exc()))
+            self.log('E {0}\n'.format(traceback.format_exc()))
             raise e
         else:
-            if self.logfunc:
-                self.logfunc('< {0}\n'.format(data))
+            self.log('< {0}\n'.format(data))
         
         return reply
         
@@ -325,7 +368,9 @@ class Bridge:
     def DELETE(self, resource):
         return self.CLIP("DELETE", resource, "")
         
-  
+    def log(self, msg):
+        if self.logfunc:
+            self.logfunc(msg)
  
 
     
