@@ -5,6 +5,6 @@
 # NOTE: Don't use this fixed user anymore to avoid username guessing. Use a random one.
 #       Keep this constant so we can delete this unsafe user.
 OLD_BRIDGEUSER = "65c3f3f7caf6f3c782a5cf3ed8b25de2c83e5b07"
-DEVICETYPE = "Kodi Hue control ({0})"
+DEVICETYPE = "Kodi Hue control - {0}"
 
 NUM_PRESETS = 5
